force-app/main/default/objects/DisableAutomation__mdt/DisableAutomation__mdt.object-meta.xml
<CustomObject>
    <description>Used to bulk disable validation rules, flows, etc. to disable.</description>
    <label>DisableAutomation</label>
    <pluralLabel>DisableAutomations</pluralLabel>
</CustomObject>