force-app/main/default/objects/DisableAutomation__mdt/fields/APIObjectName__c.field-meta.xml
<CustomField>
    <fullName>APIObjectName__c</fullName>
    <description>API Name of the Object the automation is on.</description>
    <label>APIObjectName</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>