force-app/main/default/objects/DisableAutomation__mdt/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Comments to describe Disable Automation record.</description>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>