force-app/main/default/objects/DisableAutomation__mdt/fields/IsActiveApex__c.field-meta.xml
<CustomField>
    <fullName>IsActiveApex__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether Apex on Object should be Active (checked) or not (unchecked).</description>
    <label>IsActiveApex</label>
    <type>Checkbox</type>
</CustomField>