force-app/main/default/objects/DisableAutomation__mdt/fields/IsActiveFlow__c.field-meta.xml
<CustomField>
    <fullName>IsActiveFlow__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether Flows on Object should be Active (checked) or not (unchecked).</description>
    <label>IsActiveFlow</label>
    <type>Checkbox</type>
</CustomField>