force-app/main/default/objects/DisableAutomation__mdt/fields/IsActiveValidationRule__c.field-meta.xml
<CustomField>
    <fullName>IsActiveValidationRule__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether Validation Rules on Object should be Active (checked) or not (unchecked).</description>
    <label>IsActiveValidationRule</label>
    <type>Checkbox</type>
</CustomField>