force-app/main/default/objects/DisableAutomation__mdt/listViews/DisableAutomations.listView-meta.xml
<ListView>
    <fullName>DisableAutomations</fullName>
    <columns>APIObjectName__c</columns>
    <columns>IsActiveFlow__c</columns>
    <columns>IsActiveValidationRule__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>DisableAutomations</label>
</ListView>